...
        <scene sceneID="MCG-Za-xP5">
            <objects>
                <viewController id="pP8-yf-mY7" customClass="ViewController" customModule="Borderline" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="qJq-dL-L0D"/>
...
                                <rect key="frame" x="38.5" y="422" width="691" height="96"/>
                                <color key="backgroundColor" red="0.56459497209999998" green="0.56459497209999998" blue="0.56459497209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Opens the level selector in challenge mode." identifier="Challenge" label="Challenge"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="tintColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="38.5" y="691" width="691" height="96"/>
                                <color key="backgroundColor" red="0.56459497209999998" green="0.56459497209999998" blue="0.56459497209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Opens the settings page." identifier="Settings" label="Settings"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="tintColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="0.5" y="0.0" width="768" height="384"/>
                            </imageView>
                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzq-ig-JQ7" userLabel="Extras">
                                <rect key="frame" x="38.5" y="556.5" width="691" height="96"/>
                                <color key="backgroundColor" red="0.56459497209999998" green="0.56459497209999998" blue="0.56459497209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjq-KL-vex" userLabel="US States">
                                <rect key="frame" x="39" y="46" width="691" height="168"/>
                                <color key="backgroundColor" red="0.56459497209999998" green="0.56459497209999998" blue="0.56459497209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Extra Levels" id="zLZ-fH-q4k">
                        <barButtonItem key="backBarButtonItem" title=" " id="b59-PM-F2y"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" id="CAw-Om-Pxp">
...
                                <rect key="frame" x="20" y="38.5" width="728" height="115"/>
                                <color key="backgroundColor" red="0.56459497209999998" green="0.56459497209999998" blue="0.56459497209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Opens level 1." identifier="Level 1" label="Level 1"/>
                                <color key="tintColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Level 1">
...
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" red="0.12790430929999999" green="0.22324320389999999" blue="0.31610073319999998" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Text field in which to enter your answer." identifier="Country Guess" label="Country Guess"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="pG7-La-chF"/>
...
