...
                }
//                }else{
//                    alertViewResponder.setTitle("Name:")
//                    alertViewResponder.setSubTitle(thisCountry.clue!)
//                }
            }
            alertView.addButton("Back", backgroundColor: GlobalConstants.lightGrey, textColor: UIColor.black) {
                alertViewResponder.close()
                self.cluesShown = false
                self.clueTitle = "Clues"
                self.clueSubTitle = "Need A Hint?"
                self.countryGuess.becomeFirstResponder()
            }
...
                kTitleFont: UIFont(name: "Arvo-Bold", size: 20)!,
                kTextFont: UIFont(name: "Arvo", size: 16)!,
                kButtonFont: UIFont(name: "Arvo", size: 14)!,
                showCloseButton: false
            )
            let alertView = SCLAlertView(appearance: appearance)
            alertView.addButton("Next") {
                self.loadCountry()
            }
            alertView.addButton("Back", backgroundColor: GlobalConstants.lightGrey, textColor: UIColor.black) {
                if let navController = self.navigationController {
                    navController.popViewController(animated: true)
                }
...
